--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -42,14 +42,13 @@ jobs:
         with:
           path: app
 
-      - name: Set up SSH Key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SECRET_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H marco-lenschau.de >> ~/.ssh/known_hosts
-
-      - name: Deploy via SCP
-        run: |
-          scp -r app/* github@marco-lenschau.de:/var/www/html/docs/
+      - name: Copy files via SCP
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: marco-lenschau.de
+          username: github
+          key: ${{ secrets.SECRET_KEY }}
+          port: 22
+          source: "./"
+          target: "/var/www/html/docs/"
           
