--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,25 +23,8 @@ jobs:
         run: cp example.env .env
 
       - name: Build website
-        run: npm run build && cp -r build app
-
-      - name: Upload Build Artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: app
-
-  deploy:
-    name: Deploy via SSH
-    needs: build
-    if: ${{ github.ref_name == github.event.repository.default_branch }}
-
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v4
-        with:
-          path: app
-
+        run: npm run build
+      
       - name: Copy files via SCP
         uses: appleboy/scp-action@v0.1.7
         with:
@@ -49,6 +32,5 @@ jobs:
           username: github
           key: ${{ secrets.SECRET_KEY }}
           port: 22
-          source: "./"
+          source: "./build/*"
           target: "/var/www/html/docs/"
-          
